# cloud_lab_practicum_task-4

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  default.nix
.github/classroom/: autograding.json
include/cloudlab/: argh.hh  kvs.hh  parser.hh
include/cloudlab/handler/: api.hh  p2p.hh
include/cloudlab/message/: message_helper.hh
include/cloudlab/network/: connection.hh  routing.hh
include/cloudlab/raft/: raft.hh
include/cloudlab/tx/: tx.hh
lib/: kvs.cc  parser.cc
lib/handler/: api.cc  p2p.cc
lib/message/: cloud.proto  message_helper.cc
lib/network/: connection.cc  server.cc
lib/raft/: raft.cc
lib/tx/: tx.cc
src/: ctl.cc  kvs.cc  tests_clt.cc
tests/: ctlsupport.py  socketsupport.py  test_concurrent_no_sharing.py  test_concurrent_shared_big.py  test_concurrent_shared_small.py  test_concurrent_transactions.py  test_concurrent_utils.py  test_transaction_abort.py  test_transaction_rollback.py  test_two_phase_commit.py  tests_clt_run.py  testsupport.py
